--- a/base_model_group1/base_model_mesa/model/demo.ipynb
+++ b/base_model_group1/base_model_mesa/model/demo.ipynb
@@ -410,7 +410,8 @@
    ],
    "source": [
     "model_data = model.datacollector.get_model_vars_dataframe()\n",
-    "model_data"
+    "model_data\n",
+    "#change"
    ]
   }
  ],
