generic programming of I_threshold and policy

--- a/base_model_group1/base_model_mesa/model/demo.ipynb
+++ b/base_model_group1/base_model_mesa/model/demo.ipynb
@@ -189,7 +189,7 @@
     "import numpy as np\n",
     "\n",
     "# Initialize the Adaptation Model with 50 household agents.\n",
-    "model = AdaptationModel(number_of_households=50, flood_map_choice=\"harvey\", network=\"watts_strogatz\") # flood_map_choice can be \"harvey\", \"100yr\", or \"500yr\"\n",
+    "model = AdaptationModel(number_of_households=50, flood_map_choice=\"harvey\", network=\"watts_strogatz\", I_threshold=50000, policy=1.0) # flood_map_choice can be \"harvey\", \"100yr\", or \"500yr\"\n",
     "\n",
     "# Calculate positions of nodes for the network plot.\n",
     "# The spring_layout function positions nodes using a force-directed algorithm,\n",
